# chaos-logic-bench

./: .gitignore  CITATION.cff  CONTRIBUTING.md  DATASET.md  FINAL_CONSISTENCY_REPORT_2025-01-01.md  LICENSE  LICENSE_DATA  ONTOLOGY.md  README.md  SECURITY.md  eval_chaosbench.py  pyproject.toml
.github/workflows/: ci.yml
docs/: API_SETUP.md  CONTRIBUTING.md  RESULTS.md
published_results/: README.md
published_results/claude3_zeroshot/: accuracy_by_task.csv  metrics_overview.csv  run_meta.json  summary.json
published_results/gemini_zeroshot/: accuracy_by_task.csv  metrics_overview.csv  run_meta.json  summary.json
published_results/gpt4_cot/: accuracy_by_task.csv  metrics_overview.csv  run_meta.json  summary.json
published_results/gpt4_zeroshot/: accuracy_by_task.csv  metrics_overview.csv  run_meta.json  summary.json
published_results/llama3_cot/: accuracy_by_task.csv  metrics_overview.csv  run_meta.json  summary.json
published_results/llama3_zeroshot/: accuracy_by_task.csv  metrics_overview.csv  run_meta.json  summary.json
scripts/: aggregate_results.py  dataset_stats.py  validate_repo_claims.py
tests/: test_normalization.py
