[project]
name = "chaos-logic-bench"
version = "1.0.0"
description = "ChaosBench-Logic: Benchmarking LLMs on complex reasoning about dynamical systems"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Noel Thomas", email = "noel.thomas@mbzuai.ac.ae"},
]
keywords = ["llm", "benchmark", "dynamical-systems", "chaos-theory", "reasoning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
    "huggingface-hub>=0.20.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/11NOel11/ChaosBench-Logic"
Repository = "https://github.com/11NOel11/ChaosBench-Logic"
Issues = "https://github.com/11NOel11/ChaosBench-Logic/issues"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["."]
